Try fixing bootstrap4 issue on safari

--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,8 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-.row:before, .row:after {
-	display: none !important;
-}
+.row:before, .row:after {display: none !important;}
+.row:before, .row:after {width:0px; height:0px;}
 
 /* Mobile Styles */
 @media only screen /*and (max-width: 767px)*/ {
@@ -333,6 +332,8 @@
 
 	/*------------ Footer CSS ------------*/
 
+	.row:before, .row:after {display: none !important;}
+	.row:before, .row:after {width:0px; height:0px;}
 }
 
 /* Tablet Styles */
@@ -631,6 +632,8 @@
 		color: red;
 	}
 
+	.row:before, .row:after {display: none !important;}
+	.row:before, .row:after {width:0px; height:0px;}
 }
 
 /* Desktop Styles */
@@ -971,4 +974,6 @@
 		color: red;
 	}
 
+	.row:before, .row:after {display: none !important;}
+	.row:before, .row:after {width:0px; height:0px;}
 }
